Fix modal backdrop, align muuv

--- a/app/assets/stylesheets/api/workout_edit.scss
+++ b/app/assets/stylesheets/api/workout_edit.scss
@@ -12,6 +12,7 @@
 }
 
 .modal-backdrop {
+  margin-left: -350px;
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, .5);
